replace Guava and Guice usage with stream API and JSR-330 in kb-invoice
This is the first part of killbill-invoice work. Changes for another classes will be added by next PRs